<resources>
    <string name="app_name">Ticketmaster</string>
    <string name="logo">logo</string>
    <string name="name">name</string>
    <string name="date">date</string>
    <string name="location">location</string>
    <string name="time">time</string>
    <string name="id">id</string>
    <string name="city">city</string>
    <string name="imgevent">imgevent</string>
    <string name="imgview">imgview</string>
    <string name="descript">descript</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="all_event_fragment">All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="music_fragment">Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sport_fragment">Sport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="top_fragment">Top fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bottom_fragment">Bottom fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="eventimg">eventimg</string>
    <string name="timetxt">time</string>
    <string name="img">img</string>
    <string name="citytxt">city</string>
    <string name="txt">txt</string>
    <string name="textview">TextView</string>
</resources>