<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header0">

        <Button
            android:id="@+id/all_events_btn"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/header0"
            android:text="@string/all"
            app:layout_constraintEnd_toStartOf="@id/music_event_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/music_event_btn"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/header0"
            android:text="@string/music"
            app:layout_constraintEnd_toStartOf="@id/sports_event_btn"
            app:layout_constraintStart_toEndOf="@id/all_events_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sports_event_btn"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/header0"
            android:text="@string/sports"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/music_event_btn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>